viewport fixed to 100vw + no margin no overflow html body

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 /* General Layout */
-body {
+html, body {
 	background-color: #fff;
 	font-family: Raleway, sans-serif;
 	margin: 0;
 	transition: all .5s ease;
+	max-width: 100%;
+    overflow-x: hidden;
 }
 main {
 	display: flex;
@@ -238,7 +240,7 @@ header {
 	box-shadow: 0px 0px 6px #a5a5a5;
 }
 .leftSubHeader {
-	width: -webkit-fill-available;
+	width: 100vw;
 	background-color: #f2f2f2;
 }
 #topContent {
@@ -247,9 +249,7 @@ header {
 #botContent {
 	margin-bottom: 50px 
 }
-#rightContent {
-	width: -webkit-fill-available;
-}
+
 button {
 	background-color: #c174c8;
 	color: #fff 
@@ -425,7 +425,7 @@ input[type=search] {
 	align-items: center;
 	justify-content: space-between;
 	height: 70px;
-	width: 360px;
+    width: 40vw;
 	font-weight: 700;
 	border-radius: 20px;
 	margin: 15px;
@@ -495,7 +495,7 @@ input[type=search] {
 }
 .chip {
 	display: flex;
-	width: 20%;
+	width: 300px;
 	align-items: center;
 	height: 70px;
 	font-weight: 700;
@@ -962,6 +962,7 @@ input[type=search] {
 
    .chipMenu {
 	background-color: white;
+	width: 70vw;
 
    }
 
@@ -980,7 +981,7 @@ input[type=search] {
 		width: -webkit-fill-available;
    }
 	#rightContent {
-		width: -webkit-fill-available;
+		width: 100vw;
 		background-color: #f2f2f2;
 		padding: 2%;
 		margin: 0;
